Update API to have profile picture in user fetch
