# Backend/Artisashop/Models/AccountViewModel.cs
@@ -7,6 +7,8 @@ public class AccountViewModel
     public string? Email { get; set; }
     public bool? EmailConfirmed { get; set; }
     public bool? TwoFactorEnabled { get; set; }
+
+    public string? ProfilePicture { get; set; }
     
     public List<string> Roles { get; set; } = new List<string>();
 }
