# Frontend/swagger.json
@@ -4254,6 +4254,10 @@
             "type": "boolean",
             "nullable": true
           },
+          "profilePicture": {
+            "type": "string",
+            "nullable": true
+          },
           "roles": {
             "type": "array",
             "items": {
